More methods to make things easier and docs updates